Update profile title and header structure

--- a/profile/index.html
+++ b/profile/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow">
-<title>Tim van Veen — CV</title>
+<title>Tim van Veen — Profile</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 
@@ -43,10 +43,22 @@ a {
     margin-bottom: 10px;
 }
 
-.header p {
+.header .titles {
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    color: #111;
+    margin-bottom: 5px;
+}
+
+.header .subtext {
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
     font-size: 16px;
-    opacity: 0.8;
-    margin: 4px 0;
+    color: #111;
+    line-height: 1.4;
+    letter-spacing: 0.5px;
+    margin-bottom: 10px;
 }
 
 /* ---------- LAYOUT ---------- */
@@ -129,8 +141,8 @@ a {
     <!-- HEADER -->
     <div class="header">
         <h1>TIM VAN VEEN</h1>
-        <p><em>Music Producer – Creative Director</em></p>
-        <p><em>Crafting experiences working with sound, visuals and space</em></p>
+        <p class="titles">Music Producer – Creative Director</p>
+        <p class="subtext">Crafting experiences working with sound, visuals and space</p>
         <p>Amsterdam</p>
     </div>
 
@@ -149,7 +161,6 @@ a {
 
             <h3>SKILLS</h3>
             <ul>
-                
                 <li>Music composition & production</li>
                 <li>Creative direction</li>
                 <li>Visual storytelling</li>
@@ -173,8 +184,7 @@ a {
             <ul>
                 <li>
                     <strong>Bachelor of Music (Hons)</strong><br>
-                    Music Composition and Production
-                    Utrecht University of Arts (HKU)
+                    Music Composition and Production, Utrecht University of Arts (HKU)
                 </li>
                 <li>
                     <strong>Music Production Course</strong><br>
@@ -255,4 +265,3 @@ a {
 
 </body>
 </html>
-
