Remove 'Video' from editing and color grading

--- a/profile/index.html
+++ b/profile/index.html
@@ -168,7 +168,7 @@ a {
                 <li>Interior styling & mood design</li>
                 <li>Material & spatial sense</li>
                 <li>Hands-on execution</li>
-                <li>Video editing & color grading</li>
+                <li>Editing & color grading</li>
             </ul>
 
             <h3>TOOLS</h3>
