Update profile description for clarity

--- a/profile/index.html
+++ b/profile/index.html
@@ -209,7 +209,7 @@ a {
 
             <h3 class="section-title">PROFILE</h3>
             <p>
-            I work with sound, visuals and space to create calm, intentional experiences.
+            I work with sound, visuals and space to create immersive, intentional experiences.
             My background spans music production, visual storytelling and spatial design.
             </p>
             <p>
