Remove alt attribute from portrait image
Removed the alt attribute from the portrait image.

--- a/profile/index.html
+++ b/profile/index.html
@@ -161,7 +161,7 @@ a {
         <div class="left-col">
 
             <!-- PORTRET FOTO -->
-            <img src="images/portrait.jpg" alt="Tim van Veen" class="portrait">
+            <img src="images/portrait.jpg" class="portrait">
 
             <h3>CONTACT</h3>
             <ul>
